<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/task_cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/task_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/task_name" />

            <TextView
                android:id="@+id/task_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/task_title"
                android:textSize="20sp"
                android:textStyle="italic"
                android:text="@string/task_description" />

            <TextView
                android:id="@+id/timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/task_description"
                android:textSize="20sp"
                android:textStyle="italic"
                android:text="@string/timestamp" />

            <TableRow
                android:id="@+id/task_tablerow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_alignBottom="@+id/timestamp">

                <Button
                    android:id="@+id/edit_task_button"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginRight="16dp"
                    android:background="@android:drawable/ic_menu_edit"/>

                <Button
                    android:id="@+id/delete_task_button"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginRight="16dp"
                    android:background="@android:drawable/ic_delete"/>
            </TableRow>
        </RelativeLayout>









    </androidx.cardview.widget.CardView>



</LinearLayout>